[gd_scene load_steps=11 format=3 uid="uid://csabxxg0ykc46"]

[ext_resource type="Script" path="res://Acteur/Ennemie/Script/ennemie.gd" id="1_disl6"]
[ext_resource type="Texture2D" uid="uid://bfl6m3gvxvdj" path="res://kenney_pixel-platformer/Tilemap/tilemap-characters_packed.png" id="2_r8fn2"]
[ext_resource type="PackedScene" uid="uid://gkkuly1psfwx" path="res://Object/hit_zone.tscn" id="3_4vy0a"]
[ext_resource type="AudioStream" uid="uid://wxfu1t0inf1o" path="res://Audio/SoundEffect/MonsterDead.mp3" id="4_f52ff"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4woo7"]
atlas = ExtResource("2_r8fn2")
region = Rect2(120, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_povtt"]
atlas = ExtResource("2_r8fn2")
region = Rect2(72, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_cwkfi"]
atlas = ExtResource("2_r8fn2")
region = Rect2(96, 48, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_oo5ao"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4woo7")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_povtt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cwkfi")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_meowu"]
size = Vector2(24, 21)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ir2g1"]
size = Vector2(24, 21)

[node name="BigEnnemie" type="Node2D"]
script = ExtResource("1_disl6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_oo5ao")
animation = &"walk"
autoplay = "walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -10.5)
shape = SubResource("RectangleShape2D_meowu")

[node name="hitZone" parent="." instance=ExtResource("3_4vy0a")]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitZone"]
visible = false
position = Vector2(0, -10.5)
shape = SubResource("RectangleShape2D_ir2g1")

[node name="rayCastDroite" type="RayCast2D" parent="."]
position = Vector2(-2, -6)
target_position = Vector2(20, 0)

[node name="rayCastGroundDroite" type="RayCast2D" parent="."]
position = Vector2(-12, -6)
target_position = Vector2(0, 12)

[node name="rayCastGroundGauche" type="RayCast2D" parent="."]
position = Vector2(12, -6)
target_position = Vector2(0, 12)

[node name="rayCastGauche" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(-18, 0)

[node name="BulletHitZone" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletHitZone"]
visible = false
position = Vector2(0, -11)
shape = SubResource("RectangleShape2D_ir2g1")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="MonsterDead" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_f52ff")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
